# heirloom-sed

./: .gitmodules  GNUmakefile.am  Makefile  autogen.sh  configure.ac
